fixed zoom on ios devices, apply the fix only on mobile devices

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ background-color: #393E46;
 width : 99%;
 height : 100%;
 background-size: 100vw 100vh;
+background-repeat: no-repeat;
 
 }
 
